[gd_scene load_steps=15 format=3 uid="uid://bp5cbgcpms5fw"]

[ext_resource type="Script" path="res://scripts/coreBattle/Player.gd" id="1_6p015"]
[ext_resource type="Resource" uid="uid://02paobwunyg1" path="res://resources/LabGameModeRules.tres" id="2_crf4l"]
[ext_resource type="Script" path="res://scripts/patterns/StateMachine.gd" id="3_ssxma"]
[ext_resource type="Script" path="res://scripts/input/IdleState.gd" id="4_ktfkr"]
[ext_resource type="Script" path="res://scripts/input/RecordState.gd" id="5_jjwbh"]
[ext_resource type="Script" path="res://scripts/input/VerifyState.gd" id="6_7mxss"]
[ext_resource type="Script" path="res://scripts/input/PlayerInputHandler.gd" id="7_s8ace"]
[ext_resource type="Script" path="res://scripts/testing/InputSpoofer.gd" id="8_1xwqu"]
[ext_resource type="Resource" uid="uid://ejolia4q0ylc" path="res://scripts/testing/BootsAndCats.tres" id="9_olxip"]
[ext_resource type="Script" path="res://scripts/audio/PlayerAudioDirector.gd" id="12_u36qw"]
[ext_resource type="AudioStream" uid="uid://bpxcxgaq0pyr" path="res://audio/drums/cuntyDrums/one shots/kick loud.wav" id="13_etu4j"]
[ext_resource type="AudioStream" uid="uid://b6btdhfahnc1" path="res://audio/drums/cuntyDrums/one shots/hat loud.wav" id="14_pw8yg"]
[ext_resource type="AudioStream" uid="uid://o4djfuceie68" path="res://audio/drums/cuntyDrums/one shots/snare loud.wav" id="15_hv7e0"]
[ext_resource type="AudioStream" uid="uid://c3f4vsyasoki1" path="res://audio/drums/cuntyDrums/one shots/oh full.wav" id="16_5fljo"]

[node name="Player" type="Node"]
script = ExtResource("1_6p015")
gameRules = ExtResource("2_crf4l")

[node name="PlayerStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ssxma")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_ktfkr")
rules = ExtResource("2_crf4l")
player = NodePath("../..")

[node name="RecordState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_jjwbh")
rules = ExtResource("2_crf4l")
player = NodePath("../..")

[node name="VerifyState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_7mxss")
rules = ExtResource("2_crf4l")
duration = -1.0
player = NodePath("../..")

[node name="PlayerInputHandler" type="Node" parent="."]
script = ExtResource("7_s8ace")

[node name="InputSpoofer" type="Node" parent="PlayerInputHandler" node_paths=PackedStringArray("playerStateMachine")]
script = ExtResource("8_1xwqu")
playerStateMachine = NodePath("../../PlayerStateMachine")
recordingSpoofProfile = ExtResource("9_olxip")
verifySpoofProfile = ExtResource("9_olxip")
spoofInput = true

[node name="PlayerAudioDirector" type="Node" parent="."]
script = ExtResource("12_u36qw")

[node name="DrumsAudio" type="Node" parent="PlayerAudioDirector"]

[node name="DrumPlayer1" type="AudioStreamPlayer" parent="PlayerAudioDirector/DrumsAudio"]
stream = ExtResource("13_etu4j")
mix_target = 2
max_polyphony = 4
bus = &"drums"

[node name="DrumPlayer2" type="AudioStreamPlayer" parent="PlayerAudioDirector/DrumsAudio"]
stream = ExtResource("14_pw8yg")
mix_target = 2
max_polyphony = 4
bus = &"drums"

[node name="DrumPlayer3" type="AudioStreamPlayer" parent="PlayerAudioDirector/DrumsAudio"]
stream = ExtResource("15_hv7e0")
mix_target = 2
max_polyphony = 4
bus = &"drums"

[node name="DrumPlayer4" type="AudioStreamPlayer" parent="PlayerAudioDirector/DrumsAudio"]
stream = ExtResource("16_5fljo")
mix_target = 2
max_polyphony = 4
bus = &"drums"

[connection signal="Goodhit" from="PlayerStateMachine/RecordState" to="PlayerAudioDirector" method="_on_record_state_goodhit"]
[connection signal="Goodhit" from="PlayerStateMachine/VerifyState" to="PlayerAudioDirector" method="_on_verify_state_goodhit"]
[connection signal="Hit" from="PlayerInputHandler" to="." method="_on_player_input_handler_hit"]
[connection signal="SpoofHit" from="PlayerInputHandler/InputSpoofer" to="PlayerInputHandler" method="_on_input_spoofer_spoof_hit"]
